--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -12,10 +12,10 @@
     <string name="set_as">Imposta come</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">L'autorizzazione Archiviazione è necessaria</string>
-    <string name="no_contacts_permission">L'autorizzazione Contatti è necessaria</string>
-    <string name="no_camera_permissions">L'autorizzazione Fotocamera è necessaria</string>
-    <string name="no_audio_permissions">L'autorizzazione Microfono è necessaria</string>
+    <string name="no_storage_permissions">L\'autorizzazione Archiviazione è necessaria</string>
+    <string name="no_contacts_permission">L\'autorizzazione Contatti è necessaria</string>
+    <string name="no_camera_permissions">L\'autorizzazione Fotocamera è necessaria</string>
+    <string name="no_audio_permissions">L\'autorizzazione Microfono è necessaria</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
