--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -254,4 +254,6 @@
     <string name="autofittextview_title">AutoFitTextView (ridimensionamento testo)</string>
     <string name="robolectric_title">Robolectric (ambiente di test)</string>
     <string name="espresso_title">Espresso (aiutante nei test)</string>
+    <string name="gson_title">Gson (JSON parser)</string>
+    <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
 </resources>
