--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -258,4 +258,6 @@
     <string name="autofittextview_title">AutoFitTextView (zmiana rozmiaru tekstu)</string>
     <string name="robolectric_title">Robolectric (testowanie aplikacji)</string>
     <string name="espresso_title">Espresso (testowanie aplikacji)</string>
+    <string name="gson_title">Gson (JSON parser)</string>
+    <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
 </resources>
