--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -258,4 +258,6 @@
     <string name="autofittextview_title">AutoFitTextView (text meniaci veľkosť)</string>
     <string name="robolectric_title">Robolectric (testovací framework)</string>
     <string name="espresso_title">Espresso (testovací pomocník)</string>
+    <string name="gson_title">Gson (parsovač JSON)</string>
+    <string name="leak_canary_title">Leak Canary (detektor únikov pamäte)</string>
 </resources>
