--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -256,6 +256,6 @@
     <string name="autofittextview_title">AutoFitTextView (масштабирование текста)</string>
     <string name="robolectric_title">Robolectric (тестирование framework)</string>
     <string name="espresso_title">Espresso (помощник по тестированию)</string>
-    <string name="gson_title">Gson (Анализатор JSON)</string>
+    <string name="gson_title">Gson (анализатор JSON)</string>
     <string name="leak_canary_title">Leak Canary (детектор утечки памяти)</string>
 </resources>
